# codexbar

./: .gitignore  AGENTS.md  README.en.md  README.md
codexBar/: Info.plist  Localization.swift  codexBarApp.swift
codexBar.xcodeproj/: project.pbxproj
codexBarTests/: AppLifecycleDiagnosticsTests.swift  AutoRoutingCoordinatorTests.swift  ChatCompletionsGatewayServiceTests.swift  CoalescedBackgroundRefreshControllerTests.swift  CodexBarConfigStoreTests.swift  CodexBarOAuthAccountServiceTests.swift  CodexBarOpenAIAccountUsageModeTests.swift  CodexBarProviderWireAPITests.swift  CodexDesktopLaunchProbeServiceTests.swift  CodexPathsTests.swift  CodexSyncServiceTests.swift  CompatibleProviderUseExecutorTests.swift  LocalCostSummaryServiceTests.swift  MenuBarIconResolverTests.swift  MenuBarOpenRefreshGateTests.swift  MenuBarPopoverSizingTests.swift  MenuBarRefreshErrorResolverTests.swift  MenuBarStatusItemControllerNotificationTests.swift  MenuBarStatusItemIdentityTests.swift  MenuBarStatusItemPresentationTests.swift  MenuBarUsageIconRendererTests.swift  MenuHostBootstrapServiceTests.swift  OpenAIAccountCSVPanelServiceTests.swift  OpenAIAccountCSVServiceTests.swift  (+26 more)
rust-core/: Cargo.toml
rust-core/bridge_ffi/: Cargo.toml
rust-core/bridge_ffi/src/: lib.rs
rust-core/core_codec/: Cargo.toml
rust-core/core_codec/src/: lib.rs
rust-core/core_gateway/: Cargo.toml
rust-core/core_gateway/src/: lib.rs
rust-core/core_model/: Cargo.toml
rust-core/core_model/src/: lib.rs
rust-core/core_policy/: Cargo.toml
rust-core/core_policy/src/: lib.rs
rust-core/core_runtime/: Cargo.toml
rust-core/core_runtime/src/: lib.rs
rust-core/core_session/: Cargo.toml
rust-core/core_session/src/: lib.rs
rust-core/core_store/: Cargo.toml
rust-core/core_store/src/: lib.rs
rust-core/core_update/: Cargo.toml
rust-core/core_update/src/: lib.rs
rust-core/host_contract/: Cargo.toml
rust-core/host_contract/src/: lib.rs
(+120 files in other folders)
