[workspace]
members = [
    "core_model",
    "core_policy",
    "core_codec",
    "host_contract",
    "core_store",
    "core_session",
    "core_runtime",
    "core_gateway",
    "core_update",
    "bridge_ffi",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version = "0.3", features = ["formatting"] }
